[EagerAppCDS] fix StaticDiffTestRunner.java
Summary: add-exports to use serverless-adapter.jar

Test Plan: ci jtreg cds+quickstart

Reviewed-by: lingjun-cg, yuleil